--- a/templates/main.html
+++ b/templates/main.html
@@ -11,7 +11,23 @@
     </style>
   </head>
   <body>
-    <h1>Wilkommen auf Leichs web server</h1>
+    <h1>Wilkommen auf Lacheis web server</h1>
     <p> Login </p>
+    <form class="" action="/overview" method="post">
+      <div class="imgcontainer">
+        <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+        <img src="img_avatar2.png" alt="Avatar" class="avatar">
+      </div>
+  
+      <div class="container">
+        <label for="uname"><b>Username</b></label>
+        <input type="text" placeholder="Enter Username" name="uname" required>
+  
+        <label for="psw"><b>Password</b></label>
+        <input type="password" placeholder="Enter Password" name="psw" required>
+          
+        <button type="submit">Login</button>
+      </div>
+    </form>
   </body>
 </html>
