--- a/templates/tabs/arbeitsplanung.html
+++ b/templates/tabs/arbeitsplanung.html
@@ -1,1 +1,20 @@
-Hier kommt die Arbeitsplanung
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@event-calendar/build/event-calendar.min.css">
+<p>Nachfolgend die Zeitplanung</p>
+<div id="timetable"> </div>
+<script onload="init_event_calendar();"
+    src="https://cdn.jsdelivr.net/npm/@event-calendar/build/event-calendar.min.js"></script>
+<script>
+    let event_calendar = null;
+    console.log(new Date().toLocaleDateString('de-DE'));
+    function init_event_calendar() {
+        event_calendar = new EventCalendar(document.getElementById("timetable"), {
+            view: 'timeGridWeek',
+            events: [
+                // events in herere
+            ],
+            allDayContent: "Ganztags",
+            buttonText: {close: 'Schliessen', dayGridMonth: 'Monat', listDay: 'Liste', listMonth: 'List', listWeek: 'List', listYear: 'List', resourceTimeGridDay: 'Tag', resourceTimeGridWeek: 'Woche', timeGridDay: 'Tag', timeGridWeek: 'Woche', today: 'Heute'},
+            date: new Date().toLocaleDateString('de-DE')
+        });
+    }
+</script>
