Event creation and storing now works reliable. Next event deletion and update.

--- a/templates/main.html
+++ b/templates/main.html
@@ -89,7 +89,7 @@
     <label for="uname"><b>Benutzername</b></label>
     <input id="uname" type="text" placeholder="Benutzernamen" name="uname" required>
 
-    <label for="psw"><b>Passwort</b></label>
+    <label for="password"><b>Passwort</b></label>
     <input id="password" type="password" placeholder="Passwort" name="psw" required>
 
     <button onclick="login()">Login</button>
