Mitarbeiter and Sichtbarkeit is now also settable

--- a/templates/overview.html
+++ b/templates/overview.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+    <link rel="shortcut icon" href="#">
     <link rel="stylesheet" href="{{user_specific_css}}">
     <style>
         html * {
@@ -37,6 +38,10 @@
 
         button:hover {
             opacity: 0.8;
+        }
+        
+        .p_title {
+            margin : 5px;
         }
 
         .container {
